p3/app/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec:
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 8888
